# mash-pilot

./: .env.example  .gitignore  .pilot_remote_history  CONTRIBUTING.md  Dockerfile  README.md  install.sh  pyproject.toml  render.yaml
.github/workflows/: docker.yml  release.yml
pilot/: cli.py  prompt.py  spec.py  store.py
pilot/catalog/: __init__.py  _base.py
pilot/catalog/agents/api/: spec.py
pilot/catalog/agents/cli/: spec.py
pilot/catalog/agents/mcp/: spec.py
pilot/catalog/agents/pilot/: spec.py
pilot/catalog/agents/runtime/: spec.py
pilot/catalog/agents/workflow/: spec.py
pilot/catalog/mash_guide/: __init__.py  api.py  cli.py  mcp.py  runtime.py  workflow.py
pilot/catalog/personal/: __init__.py
pilot/catalog/personal/finance_watch/: __init__.py  transactions.sample.csv
pilot/catalog/personal/morning_brief/: __init__.py
pilot/catalog/workflows/: changelog.py  quiz.py
pilot/copilots/: __init__.py  _base.py  api.py  cli.py  mcp.py  runtime.py  workflow.py
pilot/skills/build-mash-agent/: SKILL.md
pilot/skills/mash-quiz/: SKILL.md
pilot/workflows/: changelog.py  quiz.py
